release 1.0.2 (2009-01/02)
- Fixed issues 153, 178
  https://jersey.dev.java.net/issues/show_bug.cgi?id=153
  https://jersey.dev.java.net/issues/show_bug.cgi?id=178
  Use consistent class loading strategy conforming to best practice for
  EE and OSGi friendly.
- Fixed issue 176
  https://jersey.dev.java.net/issues/show_bug.cgi?id=176
  @MatrixParam not carried over for inherited annotations.
- Fixed issue 148
  https://jersey.dev.java.net/issues/show_bug.cgi?id=148
  Inccorect @Path matching for sub-resource methods sharing common path 
  structures.
- Support arrays of JAXB XML element and XML type for request and response
  entities on the client and server.
- Update to Grizzly 1.8.6.4
- Fixed issue with runtime exceptions not being mapped when thrown from
  a request filter.

release 1.0.1 (2008-11/12)
- The group id for the contribution modules, jersey-multipart, jersey-spring
  and maven-wadl-plugin Maven Mojo (maven-plugin) has changed to:
    com.sun.jersey.contribs
- Support the building a WebResource with query parameters, for example:
    WebResource r = Client.create().resource(...);
    MultivaluedMap<String, String> qps = new MultivaluedMapImpl();
    qps.add("a", "foo");
    qps.add("b", "bar");
    String s = r.queryParams(qps).get(String.class);
- For JAXB-related types the set of supported media types are "application/xml"
  "text/xml", "*/*+xml", "application/json", "*/*+json".
  Previously for JAXB-related types the set of media types for XML was
  unrestricted which limited the set of possible user-declared media types for
  JSON to just "application/json".
- Fixed issue 146
  https://jersey.dev.java.net/issues/show_bug.cgi?id=146
  UriBuilder.build was implemented as specified for UriBuilder.buildFromEncoded
  and vice versa, this has been corrected. The '&' character for the template 
  value of a template parameter that is part of a query parameter is now
  percent-encoded.
- Fixed issue 127