@@ -1,4 +1,8 @@
 release 1.0.2 (2009-01/02)
+- Fixed issue 165
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=165
+  Clarified JavaDoc for ClientResponse.getProperties and
+  ClientResponse.getMetadata()
 - Fixed issues 153, 178
   https://jersey.dev.java.net/issues/show_bug.cgi?id=153
   https://jersey.dev.java.net/issues/show_bug.cgi?id=178
